WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51413
REGRESSION (
r71884
): Returning alternate requests from willSendRequest can prevent other requests from ever being sent
https://bugs.webkit.org/show_bug.cgi?id=51413
Summary
REGRESSION (r71884): Returning alternate requests from willSendRequest can pr...
mitz
Reported
2010-12-21 12:08:44 PST
Created
attachment 77142
[details]
Project showing the bug <
rdar://problem/8668230
> To reproduce this bug, build and run the attached project. With
r71883
, the program reports that all requests will be sent, and finishes after logging “Frame load finished”. With
r71884
, it only reports the first seven requests and never finishes.
Attachments
Project showing the bug
(5.53 KB, application/zip)
2010-12-21 12:08 PST
,
mitz
no flags
Details
Call willSendRequest() before scheduling the request
(6.57 KB, patch)
2010-12-21 18:29 PST
,
mitz
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-12-21 16:31:36 PST
r71884
was wrong in moving willSendRequest to ResourceLoader::start(). It’s wrong to do all the scheduling, which is host-dependent, before calling willSendRequest, because the latter can change the host.
mitz
Comment 2
2010-12-21 16:31:55 PST
Unfortunately, it is not easy to revert
r71884
because of later changes to the code.
mitz
Comment 3
2010-12-21 18:29:22 PST
Created
attachment 77176
[details]
Call willSendRequest() before scheduling the request
mitz
Comment 4
2010-12-21 20:10:43 PST
Comment on
attachment 77176
[details]
Call willSendRequest() before scheduling the request Clearing flags on attachment: 77176 Committed
r74453
: <
http://trac.webkit.org/changeset/74453
>
mitz
Comment 5
2010-12-21 20:10:48 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 6
2010-12-21 20:33:34 PST
http://trac.webkit.org/changeset/74453
might have broken Leopard Intel Release (Build), Leopard Intel Debug (Build), Qt Linux Release minimal, Qt Linux ARMv5 Release, Qt Linux ARMv7 Release, Qt Windows 32-bit Release, and Qt Windows 32-bit Debug
Tony Gentilcore
Comment 7
2010-12-21 21:09:52 PST
Committed
r74459
: <
http://trac.webkit.org/changeset/74459
>
mitz
Comment 8
2010-12-21 21:11:52 PST
(In reply to
comment #7
)
> Committed
r74459
: <
http://trac.webkit.org/changeset/74459
>
I don’t think this is related to this bug.
Tony Gentilcore
Comment 9
2010-12-21 21:15:06 PST
(In reply to
comment #8
)
> (In reply to
comment #7
) > > Committed
r74459
: <
http://trac.webkit.org/changeset/74459
> > > I don’t think this is related to this bug.
No, I'm sorry. It belonged to
https://bugs.webkit.org/show_bug.cgi?id=51445
, but a ChangeLog merge error at commit time left my entry below the top :-(
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug